# CMakeProjectTemplate

./: CMakeLists.txt  README.md  vcpkg.json
CommonCMake/: CMakeLists.txt  README.md  vcpkg.json
CommonCMake/Application/: CMakeLists.txt
CommonCMake/Application/Source/: main.cpp
CommonCMake/include/: header.h
CommonCMake/src/: header.cpp  main.cpp
CommonCMake/triplets/: x64-windows.cmake
STM32CMake/: .gitignore  CMakeLists.txt  README.md
STM32CMake/Application/: LED.c  LED.h
STM32CMake/User/: main.c
include/: main.h
src/: main.cpp
